@startuml

title __APP's Class Diagram__\n

  package com.example.migreeni {
    class BuildConfig {
    }
  }
  

  package com.example.migreeni {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.migreeni {
    class MainActivity {
    }
  }
  

  package com.example.migreeni {
    class Merkinta_lista {
    }
  }
  

  package com.example.migreeni {
    class NavigationDrawerFragment {
    }
  }
  

  package com.example.migreeni {
    class PVM_picker {
    }
  }
  

  package com.example.migreeni {
    class Uusi_merkinta {
    }
  }
  

  package com.example.migreeni {
    class kalenteri {
    }
  }
  

  package com.example.migreeni {
    class merkinta {
    }
  }
  

  package com.example.migreeni {
    class saa {
    }
  }
  

  package com.example.migreeni {
    class time_picker {
    }
  }
  

  package com.example.migreeni {
    class valikko {
    }
  }
  

  package com.example.migreeni {
    class vanhat_merkinnat {
    }
  }
  

  package com.example.migreeni {
    class vanhat_merkinnat_avattuinfo {
    }
  }
  

  MainActivity -up-|> AppCompatActivity
  NavigationDrawerFragment -up-|> Fragment
  NavigationDrawerFragment o-- NavigationDrawerCallbacks : mCallbacks
  PVM_picker -up-|> OnClickListener
  PVM_picker -up-|> OnDateSetListener
  kalenteri -up-|> AppCompatActivity
  merkinta -up-|> AppCompatActivity
  saa -up-|> AppCompatActivity
  time_picker -up-|> OnFocusChangeListener
  time_picker -up-|> OnTimeSetListener
  valikko -up-|> NavigationDrawerCallbacks
  valikko -up-|> Activity
  valikko o-- NavigationDrawerFragment : mNavigationDrawerFragment
  vanhat_merkinnat -up-|> AppCompatActivity
  vanhat_merkinnat_avattuinfo -up-|> AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
